--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+	<header>
+		<div class="w-100 bg-main">
+			<section class="content">
+				<h1 class="title"><span class="orange">Когнитивные<br>искажения</span><br>в программировании</h1>
+				<img class="img-main" src="./assets/images/main.png" alt="hexlet с ноутбуком">
+				<div class="flex-box">
+					<div class="flex-box-item">
+						<p>Мы, разработчики часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые их этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+					</div>
+					<div class="flex-box-item">
+						<p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к дополнительной потере продуктивности, багам и бесконечному разочарованию.</p>
+						<p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+						<a class="btn-main" href="#navigation">ПОДРОБНЕЕ</a>
+					</div>
+				</div>
+			</section>
+		</div>
+	</header>
+	<main>
+		
+	</main>
 </body>
 </html>
