Step 4. Update index and style

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,16 @@
 		</div>
 	</header>
 	<main>
-		
+		<!--Video секция-->
+		<div class="w-100">
+			<section class="content p-0">
+				<div class="title-video-section">
+					<h1>Что же это такое,<br><span class="orange">когнитивные искажения?</span></h1>
+					<p>Что такое когнитивные искажения. Petrovna Channel</p>
+				</div>
+				<iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+			</section>
+		</div>
 	</main>
 </body>
 </html>
