Step 5. Update index and styles to navigation

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,41 @@
 				<iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
 			</section>
 		</div>
+		<!--Навигация-->
+		<div class="w-100 bg-black">
+			<nav class="content" id="navigation">
+				<div class="nav-item">
+					<h2 class="white"><span class="orange">5 когнитивных искажений</span><br>
+						о существовании которых стоит<br>
+						помнить</h2>
+				</div>
+				<a href="#ikea-effect" class="nav-item">
+					<h1>1</h1>
+					<h3 class="orange">Эффект ИКЕА</h3>
+					<p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+				</a>
+				<a href="#" class="nav-item">
+					<h1>2</h1>
+					<h3 class="orange">Преждевременная оптимизация</h3>
+					<p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+				</a>
+				<a href="#" class="nav-item">
+					<h1>3</h1>
+					<h3 class="orange">Искажение новизны</h3>
+					<p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+				</a>
+				<a href="#" class="nav-item">
+					<h1>4</h1>
+					<h3 class="orange">Гиперболическое обесценивание</h3>
+					<p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+				</a>
+				<a href="#" class="nav-item">
+					<h1>5</h1>
+					<h3 class="orange">Ошибка планирования</h3>
+					<p>Неправильно рассчитывать время необходимое для завершеня задачи.</p>
+				</a>
+			</nav>
+		</div>
 	</main>
 </body>
 </html>
