Step 6. Update index and style, addЭффект ИКЕА

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,25 @@
 				</a>
 			</nav>
 		</div>
+		<!--Эффект ИКЕА-->
+		<div class="w-100 bg-main">
+			<section class="content" id="ikea-effect">
+				<div class="flex-box">
+					<div class="flex-box-item">
+						<img class="content-img" src="./assets/images/1.png" alt="Разводит руками">
+					</div>
+					<div class="flex-box-item">
+						<h2 class="content-header">Эффект ИКЕА</h2>
+						<h3>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
+					</div>
+				</div>
+				<h5 class="text-header">Как проявляется</h5>
+				<div class="column-2">
+					<p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+					<p>Мы склонны переоценивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+				</div>
+			</section>
+		</div>
 	</main>
 </body>
 </html>
