Step 6. Fix index and style, fix tag content-header paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
 					</div>
 					<div class="flex-box-item">
 						<h2 class="content-header">Эффект ИКЕА</h2>
-						<h3>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
+						<p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
 					</div>
 				</div>
 				<h5 class="text-header">Как проявляется</h5>
