--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 					<h3 class="orange">Эффект ИКЕА</h3>
 					<p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
 				</a>
-				<a href="#" class="nav-item">
+				<a href="#premature-optimization" class="nav-item">
 					<h1>2</h1>
 					<h3 class="orange">Преждевременная оптимизация</h3>
 					<p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
@@ -89,6 +89,27 @@
 				<div class="column-2">
 					<p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
 					<p>Мы склонны переоценивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+				</div>
+			</section>
+		</div>
+		<!--Преждевременная оптимизация-->
+		<div class="w-100 bg-main bg-brown">
+			<section class="content" id="premature-optimization">
+				<div class="dark-theme">
+					<div class="flex-box">
+						<div class="flex-box-item">
+							<h2 class="content-header">Преждевременная оптимизация</h2>
+							<p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+						</div>
+						<div class="flex-box-item">
+							<img class="content-img" src="./assets/images/2.png" alt="Разводит руками">
+						</div>
+					</div>
+					<h5 class="text-header">Как проявляется</h5>
+					<div class="column-2">
+						<p>Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
+						<p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
+					</div>
 				</div>
 			</section>
 		</div>
