--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
 					<h3 class="orange">Преждевременная оптимизация</h3>
 					<p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
 				</a>
-				<a href="#" class="nav-item">
+				<a href="#distortion-of-novelty" class="nav-item">
 					<h1>3</h1>
 					<h3 class="orange">Искажение новизны</h3>
 					<p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
@@ -88,7 +88,7 @@
 				<h5 class="text-header">Как проявляется</h5>
 				<div class="column-2">
 					<p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
-					<p>Мы склонны переоценивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+					<p>Мы склонны переоценивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
 				</div>
 			</section>
 		</div>
@@ -102,7 +102,7 @@
 							<p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
 						</div>
 						<div class="flex-box-item">
-							<img class="content-img" src="./assets/images/2.png" alt="Разводит руками">
+							<img class="content-img" src="./assets/images/2.png" alt="Ракета взлетает с монитора лэптопа">
 						</div>
 					</div>
 					<h5 class="text-header">Как проявляется</h5>
@@ -110,6 +110,25 @@
 						<p>Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
 						<p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
 					</div>
+				</div>
+			</section>
+		</div>
+		<!--Искажение новизны-->
+		<div class="w-100 bg-main">
+			<section class="content" id="distortion-of-novelty">
+				<div class="flex-box">
+					<div class="flex-box-item">
+						<img class="content-img" src="./assets/images/3.png" alt="Разводит руками">
+					</div>
+					<div class="flex-box-item">
+						<h2 class="content-header">Искажение новизны</h2>
+						<p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+					</div>
+				</div>
+				<h5 class="text-header">Как проявляется</h5>
+				<div class="column-2">
+					<p>Часто это искажение настигает нас, когда нужно решение проблемы и... о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+					<p>Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
 				</div>
 			</section>
 		</div>
