--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 					<h3 class="orange">Искажение новизны</h3>
 					<p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
 				</a>
-				<a href="#" class="nav-item">
+				<a href="#hyperbolic-depreciation" class="nav-item">
 					<h1>4</h1>
 					<h3 class="orange">Гиперболическое обесценивание</h3>
 					<p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
@@ -118,7 +118,7 @@
 			<section class="content" id="distortion-of-novelty">
 				<div class="flex-box">
 					<div class="flex-box-item">
-						<img class="content-img" src="./assets/images/3.png" alt="Разводит руками">
+						<img class="content-img" src="./assets/images/3.png" alt="Над человеком загорелась лампочка-идея">
 					</div>
 					<div class="flex-box-item">
 						<h2 class="content-header">Искажение новизны</h2>
@@ -129,6 +129,27 @@
 				<div class="column-2">
 					<p>Часто это искажение настигает нас, когда нужно решение проблемы и... о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
 					<p>Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
+				</div>
+			</section>
+		</div>
+		<!--Гиперболическое обесценивание-->
+		<div class="w-100 bg-main bg-brown">
+			<section class="content" id="hyperbolic-depreciation">
+				<div class="dark-theme">
+					<div class="flex-box">
+						<div class="flex-box-item">
+							<h2 class="content-header">Гиперболическое обесценивание</h2>
+							<p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+						</div>
+						<div class="flex-box-item">
+							<img class="content-img" src="./assets/images/4.png" alt="Гора и рядом - человек и сундук с золотыми монетами">
+						</div>
+					</div>
+					<h5 class="text-header">Как проявляется</h5>
+					<div class="column-2">
+						<p>Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
+						<p>Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
+					</div>
 				</div>
 			</section>
 		</div>
