Step 10. Update index.html. Ошибка планирования

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
 					<h3 class="orange">Гиперболическое обесценивание</h3>
 					<p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
 				</a>
-				<a href="#" class="nav-item">
+				<a href="#errors-in-planning" class="nav-item">
 					<h1>5</h1>
 					<h3 class="orange">Ошибка планирования</h3>
 					<p>Неправильно рассчитывать время необходимое для завершеня задачи.</p>
@@ -150,6 +150,29 @@
 						<p>Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
 						<p>Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
 					</div>
+				</div>
+			</section>
+		</div>
+		<!--Ошибка планирования-->
+		<div class="w-100 bg-main">
+			<section class="content" id="errors-in-planning">
+				<div class="flex-box">
+					<div class="flex-box-item">
+						<img class="content-img" src="./assets/images/5.png" alt="Разводит руками">
+					</div>
+					<div class="flex-box-item">
+						<h2 class="content-header">Ошибка планирования</h2>
+						<p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
+					</div>
+				</div>
+				<h5 class="text-header">Как проявляется</h5>
+				<div class="column-2">
+					<p>Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта &mdash; все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
+					<p>
+						Это отлично выражается в старом афоризме:<br>
+						<br>
+						Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.
+					</p>
 				</div>
 			</section>
 		</div>
