Step 11. Update index and style. Footer.

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 		<div class="w-100 bg-black">
 			<nav class="content" id="navigation">
 				<div class="nav-item">
-					<h2 class="white"><span class="orange">5 когнитивных искажений</span><br>
+					<h2 class="dark-theme"><span class="orange">5 когнитивных искажений</span><br>
 						о существовании которых стоит<br>
 						помнить</h2>
 				</div>
@@ -177,5 +177,27 @@
 			</section>
 		</div>
 	</main>
+
+	<footer>
+		<section class="subscription d-flex bg-black dark-theme">
+			<div class="subscription-title">
+				<h3>Хотите узнать больше?<br>Подпишитесь на обновления</h3>
+			</div>
+			<div class="subscription-box">
+				<form class="grid-3">
+					<label class="mail-form-label" for="mail">Электронная почта</label>
+					<input class="mail-form" type="email" id="mail" placeholder="Ваша электронная почта">
+					<button class="subscription-btn bg-orange"></button>
+				</form>
+				<p class="subscribtion-agreement">Подписываясь, вы принимаете <a href="#">правила сервиса</a></p>
+			</div>
+		</section>
+		<!--Контакты-->
+		<div class="contacts">
+			<p>&copy; 2022 Руслан Андреев</p>
+			<p>По материалам статьи <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b">Yash Ranadive Cognitive Biases in Programming</a></p>
+			<p><a href="https://ru.hexlet.io">Курсы программирования Hexlet</a></p>
+		</div>
+	</footer>
 </body>
 </html>
