Fix background tone and footer size

--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
 		</div>
 	</main>
 
-	<footer>
+	<footer class="footer">
 		<section class="subscription d-flex bg-black dark-theme">
 			<div class="subscription-title">
 				<h3>Хотите узнать больше?<br>Подпишитесь на обновления</h3>
