Fix height of pages and styles naming

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div class="w-100 bg-main">
-			<section class="content">
+			<section class="container">
 				<h1 class="title"><span class="orange">Когнитивные<br>искажения</span><br>в программировании</h1>
 				<img class="img-main" src="./assets/images/main.png" alt="hexlet с ноутбуком">
 				<div class="flex-box">
@@ -30,9 +30,9 @@
 	<main>
 		<!--Video секция-->
 		<div class="w-100">
-			<section class="content p-0">
+			<section class="container p-0">
 				<div class="title-video-section">
-					<h1>Что же это такое,<br><span class="orange">когнитивные искажения?</span></h1>
+					<h2>Что же это такое,<br><span class="orange">когнитивные искажения?</span></h2>
 					<p>Что такое когнитивные искажения. Petrovna Channel</p>
 				</div>
 				<iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
@@ -40,7 +40,7 @@
 		</div>
 		<!--Навигация-->
 		<div class="w-100 bg-black">
-			<nav class="content" id="navigation">
+			<nav class="container" id="navigation">
 				<div class="nav-item">
 					<h2 class="dark-theme"><span class="orange">5 когнитивных искажений</span><br>
 						о существовании которых стоит<br>
@@ -75,7 +75,7 @@
 		</div>
 		<!--Эффект ИКЕА-->
 		<div class="w-100 bg-main">
-			<section class="content" id="ikea-effect">
+			<section class="container" id="ikea-effect">
 				<div class="flex-box">
 					<div class="flex-box-item">
 						<img class="content-img" src="./assets/images/1.png" alt="Разводит руками">
@@ -94,7 +94,7 @@
 		</div>
 		<!--Преждевременная оптимизация-->
 		<div class="w-100 bg-main bg-brown">
-			<section class="content" id="premature-optimization">
+			<section class="container" id="premature-optimization">
 				<div class="dark-theme">
 					<div class="flex-box">
 						<div class="flex-box-item">
@@ -115,7 +115,7 @@
 		</div>
 		<!--Искажение новизны-->
 		<div class="w-100 bg-main">
-			<section class="content" id="distortion-of-novelty">
+			<section class="container" id="distortion-of-novelty">
 				<div class="flex-box">
 					<div class="flex-box-item">
 						<img class="content-img" src="./assets/images/3.png" alt="Над человеком загорелась лампочка-идея">
@@ -134,7 +134,7 @@
 		</div>
 		<!--Гиперболическое обесценивание-->
 		<div class="w-100 bg-main bg-brown">
-			<section class="content" id="hyperbolic-depreciation">
+			<section class="container" id="hyperbolic-depreciation">
 				<div class="dark-theme">
 					<div class="flex-box">
 						<div class="flex-box-item">
@@ -155,7 +155,7 @@
 		</div>
 		<!--Ошибка планирования-->
 		<div class="w-100 bg-main">
-			<section class="content" id="errors-in-planning">
+			<section class="container" id="errors-in-planning">
 				<div class="flex-box">
 					<div class="flex-box-item">
 						<img class="content-img" src="./assets/images/5.png" alt="Разводит руками">
