Fix video section

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 	<main>
 		<!--Video секция-->
 		<div class="w-100">
-			<section class="container p-0">
+			<section class="container">
 				<div class="title-video-section">
 					<h2>Что же это такое,<br><span class="orange">когнитивные искажения?</span></h2>
 					<p>Что такое когнитивные искажения. Petrovna Channel</p>
