Fix container width

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
 			</section>
 		</div>
 		<!--Навигация-->
-		<div class="w-100 bg-black">
-			<nav class="container" id="navigation">
+		<div class="w-100 bg-black" id="navigation">
+			<nav class="container">
 				<div class="nav-item">
 					<h2 class="dark-theme"><span class="orange">5 когнитивных искажений</span><br>
 						о существовании которых стоит<br>
@@ -74,8 +74,8 @@
 			</nav>
 		</div>
 		<!--Эффект ИКЕА-->
-		<div class="w-100 bg-main">
-			<section class="container" id="ikea-effect">
+		<div class="w-100 bg-main" id="ikea-effect">
+			<section class="container">
 				<div class="flex-box">
 					<div class="flex-box-item">
 						<img class="content-img" src="./assets/images/1.png" alt="Разводит руками">
