--- a/src/index.html
+++ b/src/index.html
@@ -93,8 +93,8 @@
 			</section>
 		</div>
 		<!--Преждевременная оптимизация-->
-		<div class="w-100 bg-main bg-brown">
-			<section class="container" id="premature-optimization">
+		<div class="w-100 bg-main bg-brown" id="premature-optimization">
+			<section class="container">
 				<div class="dark-theme">
 					<div class="flex-box">
 						<div class="flex-box-item">
@@ -114,8 +114,8 @@
 			</section>
 		</div>
 		<!--Искажение новизны-->
-		<div class="w-100 bg-main">
-			<section class="container" id="distortion-of-novelty">
+		<div class="w-100 bg-main" id="distortion-of-novelty">
+			<section class="container">
 				<div class="flex-box">
 					<div class="flex-box-item">
 						<img class="content-img" src="./assets/images/3.png" alt="Над человеком загорелась лампочка-идея">
@@ -133,8 +133,8 @@
 			</section>
 		</div>
 		<!--Гиперболическое обесценивание-->
-		<div class="w-100 bg-main bg-brown">
-			<section class="container" id="hyperbolic-depreciation">
+		<div class="w-100 bg-main bg-brown" id="hyperbolic-depreciation">
+			<section class="container">
 				<div class="dark-theme">
 					<div class="flex-box">
 						<div class="flex-box-item">
@@ -154,8 +154,8 @@
 			</section>
 		</div>
 		<!--Ошибка планирования-->
-		<div class="w-100 bg-main">
-			<section class="container" id="errors-in-planning">
+		<div class="w-100 bg-main" id="errors-in-planning">
+			<section class="container">
 				<div class="flex-box">
 					<div class="flex-box-item">
 						<img class="content-img" src="./assets/images/5.png" alt="Разводит руками">
