Fix container for header, video and navi

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div class="w-100 bg-main">
-			<section class="container">
+			<section class="main-container">
 				<h1 class="title"><span class="orange">Когнитивные<br>искажения</span><br>в программировании</h1>
 				<img class="img-main" src="./assets/images/main.png" alt="hexlet с ноутбуком">
 				<div class="flex-box">
@@ -30,7 +30,7 @@
 	<main>
 		<!--Video секция-->
 		<div class="w-100">
-			<section class="container">
+			<section class="main-container">
 				<div class="title-video-section">
 					<h2>Что же это такое,<br><span class="orange">когнитивные искажения?</span></h2>
 					<p>Что такое когнитивные искажения. Petrovna Channel</p>
@@ -40,7 +40,7 @@
 		</div>
 		<!--Навигация-->
 		<div class="w-100 bg-black" id="navigation">
-			<nav class="container">
+			<nav class="main-container">
 				<div class="nav-item">
 					<h2 class="dark-theme"><span class="orange">5 когнитивных искажений</span><br>
 						о существовании которых стоит<br>
