Fix IKEA margins and img shadow

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 			</nav>
 		</div>
 		<!--Эффект ИКЕА-->
-		<div class="w-100 bg-main" id="ikea-effect">
+		<div class="w-100 p-100 bg-main" id="ikea-effect">
 			<section class="container">
 				<div class="flex-box">
 					<div class="flex-box-item">
