Fix content containers

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 			</section>
 		</div>
 		<!--Преждевременная оптимизация-->
-		<div class="w-100 bg-main bg-brown" id="premature-optimization">
+		<div class="w-100 p-100 bg-main bg-brown" id="premature-optimization">
 			<section class="container">
 				<div class="dark-theme">
 					<div class="flex-box">
@@ -114,7 +114,7 @@
 			</section>
 		</div>
 		<!--Искажение новизны-->
-		<div class="w-100 bg-main" id="distortion-of-novelty">
+		<div class="w-100 p-100 bg-main" id="distortion-of-novelty">
 			<section class="container">
 				<div class="flex-box">
 					<div class="flex-box-item">
@@ -133,7 +133,7 @@
 			</section>
 		</div>
 		<!--Гиперболическое обесценивание-->
-		<div class="w-100 bg-main bg-brown" id="hyperbolic-depreciation">
+		<div class="w-100 p-100 bg-main bg-brown" id="hyperbolic-depreciation">
 			<section class="container">
 				<div class="dark-theme">
 					<div class="flex-box">
@@ -154,7 +154,7 @@
 			</section>
 		</div>
 		<!--Ошибка планирования-->
-		<div class="w-100 bg-main" id="errors-in-planning">
+		<div class="w-100 p-100 bg-main" id="errors-in-planning">
 			<section class="container">
 				<div class="flex-box">
 					<div class="flex-box-item">
@@ -178,7 +178,7 @@
 		</div>
 	</main>
 
-	<footer class="footer">
+	<footer class="p-100">
 		<section class="subscription d-flex bg-black dark-theme">
 			<div class="subscription-title">
 				<h3>Хотите узнать больше?<br>Подпишитесь на обновления</h3>
