--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 			</section>
 		</div>
 		<!--Преждевременная оптимизация-->
-		<div class="w-100 p-100 bg-main bg-brown" id="premature-optimization">
+		<div class="w-100 p-100 bg-dark" id="premature-optimization">
 			<section class="container">
 				<div class="dark-theme">
 					<div class="flex-box">
@@ -133,7 +133,7 @@
 			</section>
 		</div>
 		<!--Гиперболическое обесценивание-->
-		<div class="w-100 p-100 bg-main bg-brown" id="hyperbolic-depreciation">
+		<div class="w-100 p-100 bg-dark" id="hyperbolic-depreciation">
 			<section class="container">
 				<div class="dark-theme">
 					<div class="flex-box">
